--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <div class="img-port" style="background-image: url(Images/irm.png);">
                     <a href="https://germanobastos.github.io/BigBoom/index.html"><div class="overlay">Controle de Estoque IRM</div></a>
                 </div>
-                <div class="img-port" style="background-image: url(Images/Screenshot\ 2024-06-03\ 101430.png);">
+                <div class="img-port" style="background-image: url(Images/ordem-servico.png);">
                     <a href="https://williamsena09.github.io/Projeto-Clemilda/"><div class="overlay">Criaçao de Ordem de Serviço</div></a>
                 </div>
             </div>
